--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11445,7 +11445,6 @@ body {
 }
 
 .cuadro_intro_hover .blur {
-  background-color: rgba(0, 0, 0, 0.7);
   height: 300px;
   z-index: 5;
   position: absolute;
@@ -11471,6 +11470,12 @@ html {
   padding: inherit;
   width: 250px;
   height: 50px;
+}
+
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:hover,
+.navbar-inverse .navbar-nav > .open > a:focus {
+  background-color: #FECB56 !important;
 }
 
 .barra {
@@ -11614,5 +11619,30 @@ hr {
 
 textarea {
   resize: none;
+}
+
+.scroll {
+  opacity: 1;
+  background-color: #FECB56;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  border-radius: 5px;
+  border: 1px #0A7984;
+}
+
+.scroll:hover {
+  opacity: 10;
+}
+
+.arrow-up {
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -9px;
+  margin-left: -5px;
 }
 
