--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -48,7 +48,7 @@ body{
 		width: 100%;
 	}
 	.cuadro_intro_hover .blur{
-		background-color: rgba(0,0,0,0.7);
+		//background-color: rgba(0,0,0,0.7);
 		height: 300px;
 		z-index: 5;
 		position: absolute;
@@ -72,6 +72,10 @@ body{
 padding: inherit;
 width: 250px;
 height: 50px;
+}
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus{
+background-color: $yellow !important;
+
 }
 
 .barra{
@@ -209,4 +213,28 @@ hr{
 }
 textarea{
 	resize: none;
+}
+.scroll{
+  opacity: 1;
+  background-color: $yellow;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  border-radius: 5px;
+  border: 1px $blue;
+}
+  
+  .scroll:hover{ 
+    opacity: 10;
+}
+ 
+.arrow-up{
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -9px;
+  margin-left: -5px;
 }
